# smart-pizza-platform

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/pizza/: __init__.py  f-string.py  lesson_01_variables_part1.py  lesson_01_variables_part2.py  lesson_02_ordering.py  lesson_03_loops_part1.py  lesson_03_loops_part2.py  lesson_04_function_part2.py  lesson_04_functions_part1.py  lesson_05_errors.py  main.py
