[project]
name = "smart-pizza-platform"
version = "0.1.0"
description = "AI-powered pizza ordering and analytics system"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aditya Shelar", email = "adishel@yahoo.com" }
]
keywords = ["pizza", "ai", "machine-learning", "python"]

[project.scripts]
pizza = "src.pizza.main:welcome"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88